axel/bundles/richcontent/richcontent.css
/* XTiger Rich Content Plugin basic style */

	.bold {
		font-weight: bold;
	}
			
	.italics {
		font-style:italic;
	}
			
	.underline {
		text-decoration: underline;
	}
	
	.line-through {
		text-decoration: line-through;
	}

	.overline {
		text-decoration: overline;
	}
		
	.box {
		padding:10px;
		border-style:solid;
		border-width:1px;
		border-color:#D4D4D4;
	}
				
	.button-as-links {
		background-color: #DFDFD0;
		color: black; 
		padding: 2px 4px 2px 4px;
		margin: 1px 3px 1px 3px; 
        -moz-border-radius: 5px;
        border-radius: 5px;
		font-size: 10pt;
		border: 0;
		box-shadow: 2px 2px 1px #888888;
	}
	
	.url-box {
	    width: 300px; 
	    height: 10pt; 
		font-size: 9pt;
		margin: 8pt 3px 0px 3px; 
	}
	
	.edit-button {
		background-color: #DFDFD0;
		color: black; 
        -moz-border-radius: 5px;
        border-radius: 5px;
		border: 0;
		margin-top: 10px;
		padding: 2px 4px 2px 4px;
		font-size: 10pt;
		box-shadow: 2px 2px 1px #888888;
		-moz-box-shadow: 2px 2px 1px #888888;
		-webkit-box-shadow: 2px 2px 1px #888888;
	}
	
	
	.modal {
		display: none;
	    background-color: #DFDFD0;
	    padding: 30px;
	    border: 1px solid black;
        -moz-border-radius: 5px;
        border-radius: 5px;
	    float: left;
	    font-size: 12pt;
	    z-index: 99999;
		box-shadow: 2px 2px 1px #888888;
		-moz-box-shadow: 2px 2px 1px #888888;
		-webkit-box-shadow: 2px 2px 1px #888888;
	}
	
	
	.buttons-container {
		padding:20px; 
		position: fixed; 
		top: 30px; 
		right: 20px;
	    background-color: #F0F0F0;
	    border: 1px solid black;
        -moz-border-radius: 5px;
        border-radius: 5px;
	    z-index: 99999;
		box-shadow: 2px 2px 1px #888888;
		-moz-box-shadow: 2px 2px 1px #888888;
		-webkit-box-shadow: 2px 2px 1px #888888;
	}

